# api-browser

./: README.md  pyproject.toml
api_browser/: __init__.py  openapi.py
api_browser/templates/: redoc.html
tests/: test_api_browser.py  test_openapi.py
tests/__snapshots__/: test_api_browser.ambr
tests/snapshots/: schema_user_output.txt  summary_output.txt
